[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcache"
version = "0.1.0"
description = "An intelligent object caching library for Python applications."
readme = "README.md"
authors = [
    { name = "Louis Goodnews", email = "louisgoodnews95@gmail.com" }
]
maintainers = [
    { name = "Louis Goodnews", email = "louisgoodnews95@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Caching",
    "Typing :: Typed",
]
dependencies = [
    "dateutil @ git+https://github.com/louisgoodnews/DateUtil.git#egg=dateutil",
    "logger @ git+https://github.com/louisgoodnews/Logger.git#egg=logger"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=2.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/louisgoodnews/Cacheing"
Documentation = "https://github.com/louisgoodnews/Cacheing#readme"
Repository = "https://github.com/louisgoodnews/Cacheing"
Changelog = "https://github.com/louisgoodnews/Cacheing/blob/main/CHANGELOG.md"
Issues = "https://github.com/louisgoodnews/Cacheing/issues"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { include = ["Cacheing", "Cacheing.*"] }

[tool.setuptools.packages.find]
where = ["src"]
